MDEV-11639 Server crashes in update_virtual_field, gcol.innodb_virtual_basic fails in buildbot

don't use thd->query_id check in background purge threads
(it doesn't work, because thd->query_id is never incremented there)
instead use thd->open_tables directly, there can be only one table
there anyway, and this is the table opened by this purge thread.